log/build_2023-10-11_21-58-34/ros_rclpy_package/stdout_stderr.log
running egg_info
writing ../../build/ros_rclpy_package/ros_rclpy_package.egg-info/PKG-INFO
writing dependency_links to ../../build/ros_rclpy_package/ros_rclpy_package.egg-info/dependency_links.txt
writing entry points to ../../build/ros_rclpy_package/ros_rclpy_package.egg-info/entry_points.txt
writing requirements to ../../build/ros_rclpy_package/ros_rclpy_package.egg-info/requires.txt
writing top-level names to ../../build/ros_rclpy_package/ros_rclpy_package.egg-info/top_level.txt
reading manifest file '../../build/ros_rclpy_package/ros_rclpy_package.egg-info/SOURCES.txt'
writing manifest file '../../build/ros_rclpy_package/ros_rclpy_package.egg-info/SOURCES.txt'
running build
running build_py
copying ros_rclpy_package/my_service_server.py -> /home/mintji/ros2_foxy/build/ros_rclpy_package/build/lib/ros_rclpy_package
running install
running install_lib
copying /home/mintji/ros2_foxy/build/ros_rclpy_package/build/lib/ros_rclpy_package/my_service_server.py -> /home/mintji/ros2_foxy/install/ros_rclpy_package/lib/python3.8/site-packages/ros_rclpy_package
byte-compiling /home/mintji/ros2_foxy/install/ros_rclpy_package/lib/python3.8/site-packages/ros_rclpy_package/my_service_server.py to my_service_server.cpython-38.pyc
  File "/home/mintji/ros2_foxy/install/ros_rclpy_package/lib/python3.8/site-packages/ros_rclpy_package/my_service_server.py", line 64
    ''' 
    def timer_callback(self):
        print('timer_callback')
        msg = Twist()
        msg.angular.z = 1.0
        for n in range(1, self.make_num+1):
            t_node1 = '/turtle'
            t_node2 = str(n)
            t_node3 = '/cmd_vel'
            turtle_node = t_node1 + t_node2 + t_node3
            self.pub = self.test_node.create_publisher(Twist, turtle_node, 10)
            self.pub.publish(msg)
    ''''
        
                             
                               
                     
                           
                                           
                               
                            
                                
                                                     
                                                                              
                                 
        ^
SyntaxError: EOL while scanning string literal

running install_data
running install_egg_info
removing '/home/mintji/ros2_foxy/install/ros_rclpy_package/lib/python3.8/site-packages/ros_rclpy_package-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/ros_rclpy_package/ros_rclpy_package.egg-info to /home/mintji/ros2_foxy/install/ros_rclpy_package/lib/python3.8/site-packages/ros_rclpy_package-0.0.0-py3.8.egg-info
running install_scripts
Installing my_first_node script to /home/mintji/ros2_foxy/install/ros_rclpy_package/lib/ros_rclpy_package
Installing my_publisher script to /home/mintji/ros2_foxy/install/ros_rclpy_package/lib/ros_rclpy_package
Installing my_service_server script to /home/mintji/ros2_foxy/install/ros_rclpy_package/lib/ros_rclpy_package
writing list of installed files to '/home/mintji/ros2_foxy/build/ros_rclpy_package/install.log'
